2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Doxygen generation rule.
	* doxygen.mk: Doxygen extra distributed files should
	be copied in doxygen-html, not Doxygen dependencies!

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Reduce Doxygen documentation dependencies.
	* doxygen/doxygen-deps.sh: Sort and remove duplicated
	dependencies.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add rules for Libtool and recursive documentation generation.
	* doc-recursive.mk: New.
	* libtool.mk: New.

2009-10-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove useless code.
	* pkg-config.mk: Here.

2009-10-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Add hooks to allow the copy of additional files in Doxygen directory.
	* doxygen.mk: Here.

2009-10-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix doxygen.mk to avoid disallowing valid patterns.
	* doxygen.m4: Only forbid ``^JRL_'' and not ``^JRL''.

2009-10-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Add JRL dependency management m4 macro.
	* jrl-pkg-config.m4: New.

2009-10-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Kineo Makefile rules.
	* kineo.mk: New.

2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Detect doxygendocdir in roboptim-core.
	* roboptim-core.m4: Here.

2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Doxyfile.extra to CLEANFILES in ``doxygen.mk''.
	* doxygen.mk: Here.

2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute shell scripts.
	* doxygen.mk,
	* git-version-gen.mk: Here.

2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Preprocess Doxyfile.extra, generate Doxygen log and be more strict.
	* doxygen.mk: Preprocess Doxyfile.extra and generate a Doxygen log file.
	* doxygen/Doxyfile.in: Make Doxygen more strict
	regarding undocumented parameters in functions.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing semi-colon in Makefile.
	* git-version-gen.mk: Here.
