@@ -1,3 +1,9 @@
+2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Regenerate the ``.pc'' file if package configuration changes.
+	* pkg-config.mk: Make the ``.pc'' file depends on
+	``config.status''.
+
 2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix Doxygen generation rule.
